--- a/ListaOptimizada_Multimedia/app/src/main/res/layout/coches_datos.xml
+++ b/ListaOptimizada_Multimedia/app/src/main/res/layout/coches_datos.xml
@@ -6,26 +6,32 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/iCoche"
         android:layout_width="166dp"
         android:layout_height="271dp"
-        app:srcCompat="@drawable/imagenrs3"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="16dp" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/imagenrs3" />
 
     <TextView
         android:id="@+id/tModelo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="53dp"
+        android:layout_marginTop="106dp"
         android:text="TextView"
-        tools:layout_editor_absoluteX="235dp"
-        tools:layout_editor_absoluteY="106dp" />
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tPotencia"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="36dp"
         android:text="TextView"
-        tools:layout_editor_absoluteX="238dp"
-        tools:layout_editor_absoluteY="161dp" />
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/tModelo" />
 </androidx.constraintlayout.widget.ConstraintLayout>
