--- a/ListaOptimizada_Multimedia/app/src/main/res/layout/coches_datos.xml
+++ b/ListaOptimizada_Multimedia/app/src/main/res/layout/coches_datos.xml
@@ -1,37 +1,43 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:padding="8dp">
+
+
 
     <ImageView
         android:id="@+id/iCoche"
-        android:layout_width="166dp"
-        android:layout_height="271dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/imagenrs3" />
+        android:scaleType="centerCrop"
+        android:contentDescription="Imagen del coche" />
 
     <TextView
         android:id="@+id/tModelo"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="53dp"
-        android:layout_marginTop="106dp"
-        android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginStart="20dp"
+        android:text="Modelo"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/iCoche"
+        app:layout_constraintTop_toTopOf="@id/iCoche" />
 
     <TextView
         android:id="@+id/tPotencia"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="36dp"
-        android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/tModelo" />
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
+        android:text="Potencia"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/iCoche"
+        app:layout_constraintTop_toBottomOf="@id/tModelo" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
